fix: frontend update

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,7 +42,7 @@
       href="%PUBLIC_URL%/fonts/index.css"
     />
 
-    <title>Farmer Portal</title>
+    <title>DS_Product Store</title>
     <meta
       name="description"
       content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
