--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -55,6 +55,7 @@
   </head>
 
   <body>
+    <div id="payhere-modal"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
